--- a/conda_env/environment.yml
+++ b/conda_env/environment.yml
@@ -3,9 +3,9 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
-  - biobb_io=5.1.0
-  - biobb_mem=5.1.0
-  - biobb_analysis=5.1.0
+  - biobb_mem=5.1.1
+  - biobb_io
+  - biobb_analysis
   - anywidget
   - plotly
   - nglview
