--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,11 +1,14 @@
-name: biobb_wf_mem_an
+name: biobb_wf_mem
 channels:
   - conda-forge
   - bioconda
 dependencies:
-  - biobb_io=5.1.0
-  - biobb_mem=5.1.0
-  - biobb_analysis=5.1.0
+  - biobb_mem==5.2.0
+  - biobb_io==5.2.0
+  - biobb_analysis==5.2.0
   - anywidget
   - plotly
   - nglview
+  - jupyterlab=3.6
+  - nodejs=16
+  - ipywidgets=7
